Added 2nd dice to game

--- a/style.css
+++ b/style.css
@@ -166,3 +166,15 @@ i {
     width: 160px;
     text-transform: uppercase;
 }
+
+.final-score:focus { 
+    outline: none;
+}
+
+#dice-1 {
+    top: 120px;
+}
+
+#dice-2 {
+    top: 250px;
+}
